[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/ui/dialogs/bg_construire.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_exit.png" type="Texture" id=3]
[ext_resource path="res://ui/building_button.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/BuildMenu.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_associatif.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_commerce.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_loisir.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_sante.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_administratif.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/interface/icon/new/icon_social.png" type="Texture" id=17]

[node name="BuildMenu" type="MarginContainer"]
margin_right = 1282.0
margin_bottom = 635.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.180392, 0.180392, 0.180392, 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1282.0
margin_bottom = 635.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="background"]
margin_left = 34.0
margin_top = 7.0
margin_right = 948.0
margin_bottom = 625.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="background/MarginContainer"]
margin_right = 914.0
margin_bottom = 618.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="building_container" type="GridContainer" parent="background/MarginContainer/ScrollContainer"]
margin_right = 914.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingButton" parent="background/MarginContainer/ScrollContainer/building_container" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 291.0
margin_bottom = 385.0

[node name="FilterContainer" type="MarginContainer" parent="background"]
margin_left = 970.0
margin_top = 50.0
margin_right = 1235.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="background/FilterContainer"]
margin_right = 265.0
margin_bottom = 549.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="admin" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 129.0
texture_normal = ExtResource( 16 )

[node name="assosiatif" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_left = 132.0
margin_right = 261.0
margin_bottom = 129.0
texture_normal = ExtResource( 12 )

[node name="commercial" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_top = 133.0
margin_right = 128.0
margin_bottom = 262.0
texture_normal = ExtResource( 13 )

[node name="habitation" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_left = 132.0
margin_top = 133.0
margin_right = 261.0
margin_bottom = 262.0
texture_normal = ExtResource( 17 )

[node name="loisir" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_top = 266.0
margin_right = 128.0
margin_bottom = 394.0
texture_normal = ExtResource( 14 )

[node name="sante" type="TextureButton" parent="background/FilterContainer/GridContainer"]
margin_left = 132.0
margin_top = 266.0
margin_right = 261.0
margin_bottom = 394.0
texture_normal = ExtResource( 15 )

[node name="BottomContainer" type="MarginContainer" parent="background"]
margin_left = 1037.4
margin_top = 470.0
margin_right = 1165.4
margin_bottom = 621.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="background/BottomContainer"]
margin_right = 128.0
margin_bottom = 151.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="background/FilterContainer/GridContainer/admin" to="." method="_on_admin_pressed"]
[connection signal="pressed" from="background/FilterContainer/GridContainer/assosiatif" to="." method="_on_assosiatif_pressed"]
[connection signal="pressed" from="background/FilterContainer/GridContainer/commercial" to="." method="_on_commercial_pressed"]
[connection signal="pressed" from="background/FilterContainer/GridContainer/habitation" to="." method="_on_habitation_pressed"]
[connection signal="pressed" from="background/FilterContainer/GridContainer/loisir" to="." method="_on_loisir_pressed"]
[connection signal="pressed" from="background/FilterContainer/GridContainer/sante" to="." method="_on_sante_pressed"]
[connection signal="pressed" from="background/BottomContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
